--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/pfp.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
-    <title>Vite App</title>
+    <title>NaraPlayVT | Links</title>
   </head>
   <body class="flex justify-center items-center">
     <video class="w-svw h-svh object-cover" playsinline autoplay muted loop poster src="https://cdn.cloudflare.steamstatic.com/steamcommunity/public/images/items/1173010/b8968e6d9fb04c2fe911923a39d6121afa75169f.webm">
